db: add BadgerDB
Updates https://github.com/tendermint/tmlibs/issues/30

Adds a backend for BadgerDB as requested at
https://github.com/tendermint/tmlibs/issues/30#issue-241573231
and tests for it along.

BadgerDB has a few problems:
a) It doesn't have a BatchDelete, our fallback is thus Delete
because if do DeleteAsync, by the time batch.Write is invoked,
we can't be sure that the deletions have ran
b) Retrieving values from iterators requires a secondary allocation
equal to the length of the current key.
See https://godoc.org/github.com/dgraph-io/badger#KV.NewIterator
c) It seems to have arbitrary options for the size of the
log file varying between 10MB to 2GB. Currently with our
DB API, we can't pass in the required file size unless we
invoke:
```go
db.NewBadgerDBWithOptions(&db.Options{
  ValueLogFileSize: desiredFileSize,
})
```

Anyways, I've arbitrarily set the default value log file size to 1GB
given that Tendermint does a whole lot of heavy lifting with
keyvalue stores <-- cite my sources

--- a/glide.yaml
+++ b/glide.yaml
@@ -10,6 +10,7 @@ import:
 - package: github.com/pkg/errors
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
+- package: github.com/dgraph-io/badger
 - package: github.com/syndtr/goleveldb
   subpackages:
   - leveldb
