--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,6 @@
 package: github.com/tendermint/tmlibs
 import:
+- package: github.com/dgraph-io/badger
 - package: github.com/go-kit/kit
   subpackages:
   - log
@@ -10,12 +11,13 @@ import:
 - package: github.com/pkg/errors
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
-- package: github.com/dgraph-io/badger
 - package: github.com/syndtr/goleveldb
   subpackages:
   - leveldb
   - leveldb/errors
+  - leveldb/iterator
   - leveldb/opt
+  - leveldb/util
 - package: github.com/tendermint/go-wire
   subpackages:
   - data
@@ -27,7 +29,6 @@ import:
 - package: gopkg.in/go-playground/validator.v9
 testImport:
 - package: github.com/stretchr/testify
-  version: ^1.1.4
   subpackages:
   - assert
   - require
